--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
-    <string name="app_name">ZoneMovies</string>
+    <string name="app_name">Zone Movies</string>
+    <string name="welcome_to">Welcome to,</string>
+    <string name="zone_movies">Zone Movies</string>
 </resources>
