--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">Zone Movies</string>
     <string name="welcome_to">Welcome to,</string>
     <string name="zone_movies">Zone Movies</string>
+    <string name="search">Search Movies</string>
 </resources>
